# financial_dashboard

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  test_crypto.py  test_fx.py  test_mvp.py  test_portfolio.py  test_stocks.py
app/: main.py  ui.py
app/adapters/: crypto_coingecko.py  fx_nbp.py  stocks_yfinance.py
app/core/: bonds.py  db.py  models.py  portfolio.py
app/services/: account_service.py  bond_service.py  crypto_ledger_service.py  dashboard_service.py  fund_service.py  holding_service.py  reference_service.py  stock_ledger_service.py  transaction_service.py
